--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
-﻿fastapi==0.104.1
+﻿# FastAPI and server
+fastapi==0.104.1
 uvicorn[standard]==0.24.0
+
+# Database
 sqlalchemy==2.0.25
-python-multipart==0.0.6
-pydantic==2.5.2
-pydantic-settings==2.1.0
-openai==1.6.1
+alembic==1.13.1
+
+# Authentication & Security
 python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Data validation
+pydantic>=2.4.0,<3.0.0
+pydantic-settings>=2.0.0,<3.0.0
+email-validator==2.1.0
+
+# AI Integration (optional)
+openai==1.6.1
+groq==0.4.1
+
+# Development tools
+python-dotenv==1.0.0
