--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 ﻿# FastAPI and server
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
 
 # Database
-sqlalchemy==2.0.25
-alembic==1.13.1
+sqlalchemy>=2.0.35
+alembic>=1.13.0
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
@@ -14,11 +14,24 @@ python-multipart==0.0.6
 # Data validation
 pydantic>=2.4.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
-email-validator==2.1.0
+email-validator==2.2.0
 
 # AI Integration (optional)
-openai==1.6.1
-groq==0.4.1
+openai==1.54.5
+groq==0.13.0
+
+# Audio Processing & TTS
+elevenlabs==0.2.26
+pydub==0.25.1
+mutagen==1.47.0
+
+# File handling
+aiofiles==24.1.0
+python-multipart==0.0.6
+
+# HTTP requests
+httpx==0.27.0
+requests==2.32.3
 
 # Development tools
 python-dotenv==1.0.0
